@@ -1,5 +1,10 @@
 2014-05-16  James Greenhalgh  <james.greenhalgh@arm.com>
 
+	* config/aarch64/aarch64.c (aarch64_rtx_costs_wrapper): New.
+	(TARGET_RTX_COSTS): Call it.
+
+2014-05-16  James Greenhalgh  <james.greenhalgh@arm.com>
+
 	* config/aarch64/aarch64.c (cortexa57_addrcost_table): New.
 	(cortexa57_vector_cost): Likewise.
 	(cortexa57_tunings): Use them.
